--- a/config.env
+++ b/config.env
@@ -1,14 +1,14 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "7008270762:AAGGQKWH8k9R7w9Dk1LZOF-FObOyIWyYT1k"                              # Require restart after changing it while bot running
+OWNER_ID = "1315244338"                               # Require restart after changing it while bot running
+TELEGRAM_API = "20196547"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "f1d32b4f43d2e1d50b863b1a77ddf2a2"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://rai:rai@cluster0.fktwown.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
@@ -26,7 +26,7 @@ FSUB_IDS = ""
 BOT_PM = "True"
 
 # GDrive Tools
-GDRIVE_ID = ""
+GDRIVE_ID = "19Cn9iUragO_aeiE5qqG9C4jXOMou6r09"
 USER_TD_MODE = ""
 USER_TD_SA = ""
 INDEX_URL = ""
@@ -66,12 +66,15 @@ LEECH_FILENAME_PREFIX = ""
 LEECH_FILENAME_SUFFIX = ""
 LEECH_FILENAME_CAPTION = ""
 LEECH_FILENAME_REMNAME = ""
+LEECH_METADATA = "True"
 MIRROR_FILENAME_PREFIX = ""
 MIRROR_FILENAME_SUFFIX = ""
 MIRROR_FILENAME_REMNAME = ""
+LEECH_METADATA = "False"
+
 
 # Log Channel/SuperGroup (Topics Support)
-LEECH_LOG_ID = ""
+LEECH_LOG_ID = "-1002613383353"
 MIRROR_LOG_ID = ""
 LINKS_LOG_ID = ""
 
